# racetrack

./: CMakeLists.txt  README.md
data/: data copy.json
doc/: commands.puml  core.puml  events.puml  platforms.puml  systems.puml
lib/: CMakeLists.txt  base_system.h  component_storage.cc  component_storage.h  component_transform.h  component_velocity.h  engine.cc  engine.h  entity.h  input.cc  input.h  renderer.cc  renderer.h  shader.cc  shader_point_fs.glsl  shader_point_vs.glsl  system_input.cc  system_input.h  system_physics.cc  system_physics.h  system_renderer.cc  system_renderer.h  world.cc  world.h
lib/commands/: load_request.cc  load_request.h
lib/components/: component_registry.cc  component_registry.h  component_storage.h  components.def  components.h  geometry_component.h  lake.h  lake_component.h  load_request_component.h  loadable_components.def  mesh_component.h  point.h  point_component.h  track.h  track_component.h  transform.h  transform_component.h  triangle.h  triangle_component.h  velocity.h  velocity_component.h
lib/core/: command.h  commandqueue.h  engine.cc  engine.h  event_sink.h  inputqueue.cc  inputqueue.h  platform.h  registry.cc  registry.h  timing.cc  timing.h  view.h  world.cc  world.h
lib/events/: event.h  key_event.cc  key_event.h  mouse_event.cc  mouse_event.h
lib/render_pipeline/: base_renderer.h  lake_renderer.cc  lake_renderer.h  mesh_renderer.cc  mesh_renderer.h  point_renderer.cc  point_renderer.h  triangle_renderer.cc
lib/rendering/: base_renderer.h  point_renderer.cc  point_renderer.h  shader.h  system_renderer.cc  system_renderer.h  triangle_renderer.cc  triangle_renderer.h
lib/systems/: base_system.cc  base_system.h  geometry_system.cc  geometry_system.h  input_system.cc  input_system.h  physics_system.cc  physics_system.h  render_system.cc  render_system.h  resource_system.cc  resource_system.h  system_input.cc  system_physics.cc  system_renderer.cc  system_renderer.h  systems.def  time_system.cc  time_system.h  track_system.cc  track_system.h
lib/systems/rendering/: base_renderer.h  lake_renderer.cc  mesh_renderer.cc  mesh_renderer.h  point_renderer.cc  point_renderer.h  shader.h  track_renderer.cc  track_renderer.h  triangle_renderer.cc  triangle_renderer.h
src/: CMakeLists.txt  data copy.json  data simple.json  data.json  racetrack.cc
test/: CMakeLists.txt  gtest_engine.cc  test_platform.cc
